# mpv-web-client

./: Cargo.toml
src/: api.rs  api_servers.rs  frontend.rs  home_dir.rs  main.rs  pkgs.rs  project_paths.rs  server.rs
src/common/: mod.rs  semver.rs  tarflate.rs
src/frontend/: pkg.rs  pkg_manifest.rs  releases.rs
src/frontend/pkg/: extraction.rs  manifest.rs  repository.rs
src/frontend/pkg/manifest/: semver.rs
src/frontend/pkg_manifest/: semver.rs
src/server/: api.rs  common.rs  frontend.rs  router.rs
src/server/api/: api_servers.rs  frontend.rs  management.rs  mod.rs
