[package]
name = "mpv-web-client"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
route-recognizer = "0.3.1"
tokio-util = "0.7.15"
futures = "0.3.31"
mime_guess = "2.0.5"
tar = "0.4.44"
flate2 = "1.1.2"
