[package]
name = "mpv-web-client"
version = "0.2.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
route-recognizer = "0.3.1"
tokio-util = "0.7.15"
futures = "0.3.31"
mime_guess = "2.0.5"
tar = "0.4.44"
flate2 = "1.1.2"
clap = { version = "4.5.40", features = ["derive"] }
walkdir = "2.5.0"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
fern = "0.7.1"
humantime = "2.2.0"
reqwest = "0.12.20"
serde_json = "1.0.140"
nix = { version = "0.30.1", features = ["net"] }
rand = "0.9.2"
